Fix tailwind css for dark mode

--- a/src/global.css
+++ b/src/global.css
@@ -6,14 +6,14 @@
 	h1 {
 		@apply font-semibold 
 		text-2xl pb-2 text-[#292929]
-		dark:text-white;
+		dark:text-gray-200;
 	}
 	h2 {
 		@apply text-sm 
 		italic text-[#374151]
-		dark:text-gray-50;
+		dark:text-gray-200;
 	}
-	h3 {
+	/* h3 {
 		@apply text-sm 
 		italic text-[#374151]
 		dark:text-gray-50;
@@ -21,19 +21,18 @@
 	p {
 		@apply text-base 
 		text-[#374151]
-		dark:text-gray-50;
+		dark:text-gray-200;
 	}
 	a {
 		@apply text-base 
 		text-[#374151]
 		dark:text-gray-50;
-	}
+	} */
 }
 
 @layer components {
 	.pageBase {
-		@apply bg-white dark:bg-gray-700
-		text-black dark:text-white
+		@apply bg-white dark:bg-[#3e3e3e]
 		min-h-screen
 		p-1; /* Add padding to parent div to avoic Margin Collapsing */
 	}
@@ -44,7 +43,6 @@
 		se:min-h-[95vh] se:my-[2.5vh]
 		py-10 se:px-20 px-5 m-auto
 		bg-gray-100 dark:bg-[#323232]
-		dark:text-white
 		se:shadow-[0px_0px_2vh_0px_rgba(55,55,55,0.2)]
 		dark:se:shadow-[0px_0px_2vh_0px_rgba(0,0,0,0.2)];
 	}
@@ -55,6 +53,7 @@
 		hover:underline 
 		hover:bg-blue-100 
 		dark:hover:bg-[#758db8]
+		dark:text-pink-50
 		hover:cursor-pointer
 		px-4 py-3 se:py-1;
 	}
@@ -65,7 +64,7 @@
 	.blogBottom {
 		@apply py-5
 		mt-32 border-t-2
-		italic text-[#374151]
+		italic text-[#374151] dark:text-pink-50
 		text-opacity-70
 		text-center;
 	}
